Correccion de links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1412,7 +1412,7 @@ section {
 #footer {
   color: #37423b;
   font-size: 14px;
-  background: #b8beda;
+  background: #cfd3e5;
 }
 
 #footer .footer-top {
