--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,11 @@
-/**
-* Template Name: Mentor
-* Updated: Mar 10 2023 with Bootstrap v5.2.3
-* Template URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
 /*--------------------------------------------------------------
-# General
+# CODIGO EN GENERAL
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+  text-align: justify;
 }
 
 a {
