--- a/assets/css/tests.css
+++ b/assets/css/tests.css
@@ -4,31 +4,11 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-body {
-  background-color: #0a69ed;
-  width: 100%;
-  height: 100vh;
-  overflow-y: auto;
-}
-main {
-  width: 100%;
-  height: 100%;
-  padding: 3rem;
-}
-.test-container {
-  height: 100%;
-}
-.test-card {
-  min-height: 20rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.tests {
+  margin-top: 7rem;
 }
 .start-screen,
 .score-container {
-  top: 0;
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,7 +25,7 @@ button {
   padding: 0.5em 1.8em;
   border-radius: 0.2em;
   background-color: #0a69ed;
-  color: #ffffff;
+  color: #fff;
 }
 #restart {
   margin-top: 0.9em;
@@ -118,15 +98,5 @@ button {
 }
 #user-score {
   font-size: 1.5em;
-}
-
-@media only screen and (max-width: 768px) {
-  main {
-    padding: 1rem;
-  }
-
-  #display-container {
-    width: 100%;
-    padding: 3.1em 0em;
-  }
+  color: ;
 }
